force-app/main/default/objects/Account/fields/Buyer_Type__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Type__c</fullName>
    <label>Buyer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Self-Use</fullName><default>true</default><label>Self-Use</label></value>
            <value><fullName>Investor</fullName><default>false</default><label>Investor</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>