force-app/main/default/objects/Account/fields/CP_Status__c.field-meta.xml
<CustomField>
    <fullName>CP_Status__c</fullName>
    <label>CP Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending Approval</fullName><default>true</default><label>Pending Approval</label></value>
            <value><fullName>Active</fullName><default>false</default><label>Active</label></value>
            <value><fullName>Suspended</fullName><default>false</default><label>Suspended</label></value>
            <value><fullName>Terminated</fullName><default>false</default><label>Terminated</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>