force-app/main/default/objects/Account/fields/CP_Tier__c.field-meta.xml
<CustomField>
    <fullName>CP_Tier__c</fullName>
    <label>CP Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Standard</fullName><default>true</default><label>Standard</label></value>
            <value><fullName>Preferred</fullName><default>false</default><label>Preferred</label></value>
            <value><fullName>Platinum</fullName><default>false</default><label>Platinum</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>