force-app/main/default/objects/Account/fields/KYC_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>KYC_Verified_Date__c</fullName>
    <label>KYC Verified Date</label>
    <type>Date</type>
</CustomField>