force-app/main/default/objects/Account/fields/NRI_Status__c.field-meta.xml
<CustomField>
    <fullName>NRI_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NRI Status</label>
    <type>Checkbox</type>
</CustomField>