force-app/main/default/objects/Account/fields/RERA_State__c.field-meta.xml
<CustomField>
    <fullName>RERA_State__c</fullName>
    <label>RERA State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value><fullName>Maharashtra</fullName><default>false</default><label>Maharashtra</label></value>
            <value><fullName>Karnataka</fullName><default>false</default><label>Karnataka</label></value>
            <value><fullName>Delhi</fullName><default>false</default><label>Delhi</label></value>
            <value><fullName>Haryana</fullName><default>false</default><label>Haryana</label></value>
            <value><fullName>Uttar Pradesh</fullName><default>false</default><label>Uttar Pradesh</label></value>
            <value><fullName>Gujarat</fullName><default>false</default><label>Gujarat</label></value>
            <value><fullName>Tamil Nadu</fullName><default>false</default><label>Tamil Nadu</label></value>
            <value><fullName>Telangana</fullName><default>false</default><label>Telangana</label></value>
            <value><fullName>West Bengal</fullName><default>false</default><label>West Bengal</label></value>
            <value><fullName>Rajasthan</fullName><default>false</default><label>Rajasthan</label></value>
            <value><fullName>Madhya Pradesh</fullName><default>false</default><label>Madhya Pradesh</label></value>
            <value><fullName>Kerala</fullName><default>false</default><label>Kerala</label></value>
            <value><fullName>Punjab</fullName><default>false</default><label>Punjab</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>