force-app/main/default/objects/Account/fields/Source_Of_Funds__c.field-meta.xml
<CustomField>
    <fullName>Source_Of_Funds__c</fullName>
    <label>Source of Funds</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Salary</fullName><default>false</default><label>Salary</label></value>
            <value><fullName>Business</fullName><default>false</default><label>Business</label></value>
            <value><fullName>Investment</fullName><default>false</default><label>Investment</label></value>
            <value><fullName>Inheritance</fullName><default>false</default><label>Inheritance</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>