force-app/main/default/objects/Account/recordTypes/Buyer.recordType-meta.xml
<RecordType>
    <fullName>Buyer</fullName>
    <active>true</active>
    <label>Buyer</label>
</RecordType>