force-app/main/default/objects/Account/recordTypes/Corporate_Buyer.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Buyer</fullName>
    <active>true</active>
    <label>Corporate Buyer</label>
</RecordType>